--- a/SimpleGesturesApp/app/src/main/res/layout/activity_main.xml
+++ b/SimpleGesturesApp/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/background2"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:src="@drawable/background"/>
+
+    <TextView
+        android:id="@+id/circle1"
+        android:layout_width="130dp"
+        android:layout_height="30dp"
+        android:background="@drawable/circle"
+        android:layout_marginLeft="250dp"
+        android:layout_marginTop="350dp"
+        android:padding="5dp" />
+
+    <TextView
+        android:id="@+id/circle2"
+        android:layout_width="130dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="350dp"
+        android:background="@drawable/circle"
+        android:padding="5dp" />
 
     <TextView
         android:id="@+id/play"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:contentDescription="Clica-me!"
-        android:layout_centerHorizontal="true"
         android:gravity="center"
         android:text="Play"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="100dp"
+        android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="64sp" />
 
     <TextView
+        android:id="@+id/highScoreTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:textColor="#000000"
-        android:text="High Score"
-        android:id="@+id/highScoreTxt"
         android:layout_margin="16dp"
-        android:layout_alignParentRight="true"/>
+        android:text="High Score"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        android:contentDescription="High Score" />
 
-</RelativeLayout>
+</FrameLayout>
