--- a/SimpleGesturesApp/app/src/main/res/layout/activity_main.xml
+++ b/SimpleGesturesApp/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -11,25 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/background"/>
-
-    <TextView
-        android:id="@+id/circle1"
-        android:layout_width="130dp"
-        android:layout_height="30dp"
-        android:background="@drawable/circle"
-        android:layout_marginLeft="250dp"
-        android:layout_marginTop="350dp"
-        android:padding="5dp" />
-
-    <TextView
-        android:id="@+id/circle2"
-        android:layout_width="130dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="350dp"
-        android:background="@drawable/circle"
-        android:padding="5dp" />
+        android:src="@drawable/whack"/>
 
     <TextView
         android:id="@+id/play"
@@ -38,8 +20,8 @@
         android:contentDescription="Clica-me!"
         android:gravity="center"
         android:text="Play"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="100dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="64sp" />
@@ -54,4 +36,4 @@
         android:textSize="24sp"
         android:contentDescription="High Score" />
 
-</FrameLayout>
+</RelativeLayout>
