--- a/DropAndDrag/app/src/main/res/layout/activity_main.xml
+++ b/DropAndDrag/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,8 @@
 
             <Button
                 android:id="@+id/box1"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:background="@drawable/woodenbox2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -49,27 +49,27 @@
 
             <Button
                 android:id="@+id/box2"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:background="@drawable/woodenbox2"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.19"
+                app:layout_constraintEnd_toStartOf="@id/box3"
+                app:layout_constraintHorizontal_bias="0.391"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.513" />
+                app:layout_constraintVertical_bias="0.514" />
 
             <Button
                 android:id="@+id/box3"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:background="@drawable/woodenbox2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/box2"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.513" />
+                app:layout_constraintVertical_bias="0.514" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -82,8 +82,8 @@
 
             <Button
                 android:id="@+id/box4"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:background="@drawable/woodenbox2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -94,8 +94,8 @@
 
             <Button
                 android:id="@+id/box5"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:background="@drawable/woodenbox2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/box6"
@@ -106,8 +106,8 @@
 
             <Button
                 android:id="@+id/box6"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:background="@drawable/woodenbox2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -115,6 +115,19 @@
                 app:layout_constraintStart_toEndOf="@+id/box5"
                 app:layout_constraintTop_toBottomOf="@+id/box4"
                 app:layout_constraintVertical_bias="0.0" />
+
+            <Button
+                android:id="@+id/restart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Restart"
+                android:textSize="30sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.122"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.975" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -145,8 +158,8 @@
 
                 <TextView
                     android:id="@+id/drop1"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:background="@drawable/dashed1"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -166,21 +179,21 @@
 
                 <TextView
                     android:id="@+id/drop2"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_gravity="start|center_vertical"
                     android:background="@drawable/dashed1"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.19"
+                    app:layout_constraintEnd_toStartOf="@id/drop3"
+                    app:layout_constraintHorizontal_bias="0.391"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.513" />
+                    app:layout_constraintVertical_bias="0.514" />
 
                 <TextView
-                    android:id="@+id/drop4"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
+                    android:id="@+id/drop3"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_gravity="right"
                     android:background="@drawable/dashed1"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -188,7 +201,7 @@
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toEndOf="@+id/drop2"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.513" />
+                    app:layout_constraintVertical_bias="0.514" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -200,9 +213,9 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/drop3"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
+                    android:id="@+id/drop4"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:background="@drawable/dashed1"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -213,26 +226,26 @@
 
                 <TextView
                     android:id="@+id/drop5"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:background="@drawable/dashed1"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/drop6"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/drop3"
+                    app:layout_constraintTop_toBottomOf="@+id/drop4"
                     app:layout_constraintVertical_bias="0.0" />
 
                 <TextView
                     android:id="@+id/drop6"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:background="@drawable/dashed1"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toEndOf="@+id/drop5"
-                    app:layout_constraintTop_toBottomOf="@+id/drop3"
+                    app:layout_constraintTop_toBottomOf="@+id/drop4"
                     app:layout_constraintVertical_bias="0.0" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
